syntax = "proto3";

option csharp_namespace = "Grpc.Server.Services";

package chat;

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

service Chat {
    // 登錄用戶
    rpc Login (LoginRequest) returns (UserInfo);

    // 獲取頻道列表
    rpc GetChannelList (UserId) returns (ChannelList);

    // 建立頻道
    rpc CreateChannel (google.protobuf.Empty) returns (Channel);

    // 加入頻道
    rpc JoinChannel (JoinChannelRequest) returns (Channel);

    // 加入頻道
    rpc JoinChannelByCode (JoinChannelByCodeRequest) returns (Channel);

    // 取得頻道內使用者清單
    rpc GetChannelMembers (ChannelId) returns (ChannelMembers);

    // 發送消息
    rpc SendMessage (SendMessageRequest) returns (google.protobuf.Empty);

    // 接收消息流
    rpc ReceiveMessage (ChannelId) returns (stream Message);

    // 接收頻道成員變更
    rpc ReceiveChannelMemberChange (ChannelId) returns (stream UserInfo);
}

message LoginRequest {
    string name = 1;
}

message UserId {
    string id = 1;
}

message UserInfo {
    UserId id = 1;
    string name = 2;
    bool status = 3;
}

message ChannelId {
    string id = 1;
}

message Channel {
    ChannelId id = 1;
    string code = 2;
    string name = 3;
}

message ChannelMembers {
    ChannelId id = 1;
    repeated UserInfo members = 2;
}

message ChannelList {
    repeated Channel channels = 1;
}

message JoinChannelRequest {
    UserId userId = 1;
    ChannelId channelId = 2;
}

message JoinChannelByCodeRequest {
    UserId userId = 1;
    string code = 2;
}

message Message {
    string sender_name = 1;
    UserId sender_id = 2;
    string content = 3;
    google.protobuf.Timestamp timestamp = 4;
}

message SendMessageRequest {
    ChannelId id = 1;
    Message message = 2;
}